resources/assets/styles/entities/volumes/layout/_volume.scss
.tax-volume_category,
.post-type-archive-feature,
.single-volume,
.page-template-page-splash {
  .utk-formal--header--background {
    width: 100%;
    height: 600px !important;
    min-height: 500px;
    position: relative;
    overflow: visible;
    display: flex;
    justify-content: center;
    align-items: center;

    img {
      opacity: 1 !important;
      margin-top: 0;
      filter: none;
    }

    &::after {
      position: absolute;
      width: 100%;
      height: $golden-ratio-8;
      min-height: 100%;
      left: 0;
      bottom: 0;
      content: '';
      background-color: transparent;
      z-index: 0;

      @include filter-gradient(rgba($smokeyx, 0), 0, rgba($smokeyx, 0.85), calc(100% - 123px));
    }
  }

  .utk-volume--splash {
    position: absolute;
    margin-top: -303px;
    width: 100%;
    z-index: 10;

    @include respond(md) {
      margin-top: -255px;
    }

    @include respond(xs, sm) {
      position: relative;
      margin-top: -76px;
      z-index: 0;
    }

    > .container {
      display: flex;
      justify-content: flex-end;

      @include respond(md) {
        iframe {
          width: 475px;
          height: 267px;
        }
      }

      @include respond(xs, sm) {
        justify-content: center;

        iframe {
          width: 475px;
          height: 267px;
        }
      }
    }
  }

  .utk-volume--about {
    background-color: $gray-0;
    padding: $golden-ratio-3;
    margin-top: $golden-ratio-3;

    h3 {
      font-size: $type-3;
      font-family: $font-volumes;
      margin: 0 0 $golden-ratio-1;
      font-weight: 700;
      line-height: 1.29em;
      letter-spacing: -0.029em;

      &::before {
        content: '';
        width: $golden-ratio-5;
        height: $golden-ratio-0;
        background-color: $orange;
        display: block;
        margin-bottom: $golden-ratio-2;
      }
    }

    &--description {
      font-size: $type-1;
      margin: 0 0 $golden-ratio-0;
      line-height: 1.47em;
    }

    > a {
      font-size: $type-0;
      font-weight: 700;
      line-height: 1.29em;
      color: $globe;
      text-transform: uppercase;
      letter-spacing: 0.029em;
      -webkit-font-smoothing: subpixel-antialiased;

      &:visited {
        color: $globe;
      }

      &:hover,
      &:focus {
        color: $leconte;
      }
    }
  }

  .utk-volume--title {
    position: absolute;
    bottom: 0;
    z-index: 1;
    margin-bottom: $golden-ratio-5;
    color: $white;
    width: 100%;
    left: 0;

    @include respond(md) {
      margin-bottom: $golden-ratio-4;
    }

    @include respond(xs, sm) {
      bottom: 29px;
    }

    > .container {
      display: flex;
      align-items: flex-end;
      justify-content: space-between;
    }

    &--inner {
      width: $gr-short;

      @include respond(xs, sm) {
        width: $gr-long;
      }
    }

    &--series {
      font-weight: 700;
      font-size: $type-0;
      text-transform: uppercase;
      display: block;
      opacity: 0.85;
    }

    h1 {
      font-size: $type-6 !important;
      font-family: $font-volumes !important;
      font-weight: 700;
      margin: 0;
      letter-spacing: -0.029em;
      text-shadow: $box-shadow;
      line-height: 1.06em;
      color: $white !important;

      @include respond(md) {
        font-size: $type-5 !important;
      }
    }

    h2 {
      font-size: $type-2 !important;
      font-family: $font-volumes !important;
      font-weight: 400;
      text-transform: uppercase;
      margin: 0 0 $golden-ratio-1;
      letter-spacing: 0.15em;
      text-shadow: $box-shadow;
      line-height: 1.29em;
      color: $sunsphere !important;
      -webkit-font-smoothing: subpixel-antialiased;
    }

    &--intro {
      margin-top: $golden-ratio-1;
      display: block;
      font-size: $type-2;
      line-height: 1.47em;
    }

    &--caption {
      display: block;
      margin-top: $golden-ratio-1;
      font-size: $type-0;
      font-weight: 700;
      color: $summitt;
      box-shadow: $box-shadow;
    }

    .utk-svg {
      width: $golden-ratio-6;
      position: absolute;
      top: 0;
      margin-top: -$golden-ratio-4;

      svg,
      img {
        max-width: 100%;
        width: 100%;
        height: auto;
      }
    }
  }
}

.tax-volume_category .utk-formal--header--background {
  height: 600px;
}

.page-body--content-volumes {
  p {
    &:first-child {
      margin-top: 0;

      &::first-letter {
        float: left;
        font-size: 3.3em;
        font-weight: 400;
        line-height: 0.9em;
        margin-right: 5px;
        text-transform: none;
      }
    }

    @include serif-body-rendering();
  }
}

